# goldie

./: README.md  pyproject.toml
example/: golden_directory_test.py
goldie/: __init__.py  compare.py  comparison.py  diff.py  directory.py  run.py  testing.py  update.py
goldie/tests/: test_diff.py
