[build-system]
build-backend = "hatchling.build"
requires = ["hatchling >= 1.13.0"]

[project]
authors = [
    { email = "merschformann@proton.me", name = "Marius Merschformann" }
]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]
dependencies = [
    "pydantic>=2.5.2",
    "urllib3>=2.1.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
]
description = "A humble library greasing the gears of golden file tests"
dynamic = [
    "version",
]
keywords = [
    "golden file",
    "testing",
    "test",
    "integration test",
]
license = { file = "LICENSE" }
maintainers = [
    { email = "merschformann@proton.me", name = "Marius Merschformann" }
]
name = "goldie"
readme = "README.md"
requires-python = ">=3.11"

[project.urls]
Homepage = "https://github.com/merschformann/goldie"
Repository = "https://github.com/merschformann/goldie"

[tool.hatch.version]
path = "goldie/__about__.py"
